modif of all page html

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 body{
     text-align: center;
 }
+nav ul {
+    display: flex;
+    justify-content: space-around;
+}
+li{
+    list-style: none;
+}
