modif of d css and finalisation of d code now start of logic of d code

--- a/css/reset.css
+++ b/css/reset.css
@@ -36,7 +36,7 @@ html {
   a {
     color: white;
     text-decoration: none;  
-    background-color: black;
+    background-color: #3D5467;
     
   }
   * {
