--- a/css/style.css
+++ b/css/style.css
@@ -6,24 +6,22 @@ body{
     background-size: cover;
 }
 table {
-    background-color: black;
+    background-color: #3D5467;
     margin: 0 auto;
     width: 80%;
     border-collapse: collapse; /* Pour un affichage plus propre des bordures */
 }
 th, td {
-    border: 1px solid black;
+    border: 1px solid #3D5467;
     padding: 15px;
 }
 li{
-    background-color: black;
+    background-color: #3D5467;
     border-radius: 60%;
     width: 6%;
 }
 fieldset{
     margin: 0 auto;
-    background-color: black;
+    background-color: #3D5467;
     width: 30%;
 }
-
-
